# UHRR_mac

./: .dockerignore  .gitignore  AGENTS.md  AOD.md  ATU1000_power_SWR_issue.MD  ATU_COMPLETE_FIX.md  ATU_CONNECTION_FIX.md  ATU_DATA_FIX_COMPLETE.md  ATU_DATA_PARSING_FIX.md  ATU_DIAGNOSTIC_FINAL_FIX.md  ATU_DIAGNOSTIC_FIX_README.md  ATU_DIAGNOSTIC_GUIDE.md  ATU_DIAGNOSTIC_SYNTAX_FIX.md  ATU_FIX_SUMMARY.md  ATU_IMPROVEMENTS_SUMMARY.md  ATU_INTEGRATION_README.md  ATU_INTERFACE_INTEGRATION.md  ATU_REALTIME_DATA_FIX.md  ATU_REALTIME_DISPLAY_FINAL_REPORT.md  ATU_REALTIME_MONITOR_README.md  ATU_REMOTE_SETUP.md  ATU_SERVER  ATU_SERVER_WEBSOCKET.py  ATU_SERVER_WEBSOCKET.py.backup  ATU_SWR_DISPLAY_SUMMARY.md  AUDIO_FIX_SUMMARY.md  AUDIO_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLETE_WORK_SUMMARY.md  CQ.m4a  CW.md  DESIGN_DOCUMENT.md  DOCKER_DEPLOYMENT.md  DSP.md  Dockerfile  FDE.md  FINAL_ATU_IMPROVEMENT_REPORT.md  FINAL_AUDIO_FIXES.md  FINAL_AUDIO_FIX_REPORT.md  (+202 more)
.iflow_logs/: .session_index  README.md  iflow_auto_log.sh  install.sh  new_log.sh  start_iflow.sh  template.md
.opencode/: summary.md
DESIGN/: MRRC_SDD.md
SDD/: 01-executive-summary.md  02-business-direction.md  04-system-context.md  05-non-functional-requirements.md  06-use-case-model.md  08-architecture-decisions.md  09-architecture-overview.md  (+6 more)
efhw-knowledge/auto-efhw-tuner/firmware-esp32/main/: CMakeLists.txt  atu_config.h  atu_main.c  health_mon.c  health_mon.h  nvs_cache.c  nvs_cache.h  protocol.c  protocol.h  servo_ctrl.c  servo_ctrl.h  tune_engine.c  tune_engine.h  ws_client.c  ws_client.h
(+421 files in other folders)
